--- a/css/style.css
+++ b/css/style.css
@@ -28,19 +28,30 @@ body {
   display: none;
 }
 
+.imgLogo {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
 .qnaBox {
-  margin-top: 150px;
-  font-size: 1.3rem;
+  margin-top: 80px;
+  font-size: 1.2rem;
 }
 
 .answerBox {
-  margin: 150px 0;
-  gap: 30px;
+  align-items: center;
+  width: 80%;
+  gap: 2vh;
+  margin: 100px 0;
 }
 
 .answerList {
-  height: 90px;
-  line-height: 2;
-  text-align: center;
-  border: 2px black solid;
+  width: 100%;
+  height: 100%;
+  padding: 40px 20px;
+  font-size: 18px;
+  max-width: calc(387px);
+  border: 2px #274642 solid;
+  border-radius: 8px;
 }
