--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: #f6e7e3;
   padding: 10px;
   font-family: "Dovemayo_gothic";
 }
@@ -26,6 +26,10 @@ body {
 
 #result {
   display: none;
+}
+
+img {
+  max-width: 100%;
 }
 
 .imgLogo {
@@ -54,4 +58,34 @@ body {
   max-width: calc(387px);
   border: 2px #274642 solid;
   border-radius: 8px;
+}
+
+.resultCont {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.resultName {
+  font-size: 2rem;
+  padding: 10px;
+  border-bottom: 4px double #575757;
+}
+
+.resultDesc {
+  margin: 30px 0;
+  border: 2px solid #575757;
+  padding: 15px;
+  background-color: white;
+}
+
+.descList {
+  line-height: 1.3;
+}
+
+li + li {
+  margin-top: 15px;
 }
