--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,9 @@ img {
 }
 
 .qnaBox {
-  margin-top: 80px;
+  margin: 80px auto 0;
   font-size: 1.2rem;
+  max-width: 500px;
 }
 
 .answerBox {
@@ -58,6 +59,7 @@ img {
   max-width: calc(387px);
   border: 2px #274642 solid;
   border-radius: 8px;
+  background-color: white;
 }
 
 .resultCont {
