--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,24 @@ img {
   margin: 0 auto;
 }
 
+.status {
+  height: 20px;
+  width: 60%;
+  margin: 40px auto;
+  background-color: white;
+  border: 1px solid #575757;
+  border-radius: 5px;
+}
+
+.statusBar {
+  height: 100%;
+  background-color: #4e6c63;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 .qnaBox {
-  margin: 80px auto 0;
+  margin: 60px auto 0;
   font-size: 1.2rem;
   max-width: 500px;
 }
@@ -57,7 +73,7 @@ img {
   padding: 40px 20px;
   font-size: 18px;
   max-width: calc(387px);
-  border: 2px #274642 solid;
+  border: 1px solid #274642;
   border-radius: 8px;
   background-color: white;
 }
@@ -106,7 +122,7 @@ li + li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 20px 5px;
 }
 
 .type.best {
