ㅇ메인 페이지 이미지 변경 및 시작 버튼 추가

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,23 @@ img {
   max-width: 100%;
 }
 
+.imgContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.imgMain {
+  border-radius: 50px;
+}
+
+.btnStart {
+  width: 80%;
+  margin-top: 30px;
+  background-color: transparent;
+}
+
 .imgLogo {
   width: 100%;
   display: block;
