--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,14 @@ body {
   font-family: "Dovemayo_gothic";
 }
 
+#main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 #qna {
   display: none;
 }
