--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ img {
 
 .status {
   height: 20px;
-  width: 60%;
+  width: 90%;
   margin: 40px auto;
   background-color: white;
   border: 1px solid #575757;
@@ -80,6 +80,7 @@ img {
   background-color: #4e6c63;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  transition: all 0.5s ease 0s;
 }
 
 .qnaBox {
