--- a/css/style.css
+++ b/css/style.css
@@ -192,3 +192,20 @@ li + li {
   width: 80%;
   margin: 40px auto;
 }
+
+.resultShare {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2vh;
+}
+
+.share {
+  font-size: 1.1rem;
+}
+
+.shareLink {
+  display: flex;
+  flex-direction: row;
+  gap: 1vw;
+}
